# Tailwind

./: .gitignore  .readthedocs.yaml  LICENCE.md  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: dependency-review.yml  package-deploy.yml  python-app.yml  python-package.yml
docs/: README.md  astro.config.mjs  pnpm-lock.yaml
docs/source/: conf.py  index.rst
docs/source/installation/: index.rst
docs/source/reference/: index.rst
docs/source/reference/graphics/: index.rst
docs/source/reference/math/: index.rst
docs/src/content/docs/: index.mdx
src/: graphing.py  main.py  statistics.py  styles.py  util.py  widget.py  widgets.py  window.py
src/lib/: util.py
src/main/: main.py
src/statistics_lib/: statistics.py
tailwind/: graphing.py  main.py  styles.py  util.py  widget.py  widgets.py  window.py
tailwind/graphics_lib/: graphics.py
tailwind/statistics_lib/: diagrams.py  statistics.py
tailwindall/: __init__.py  bases.py  fonts.py  graphing.py  logger.py  main.py  popup.py  script.tw  style.tw  styles.py  test.js  util.py  widget.py  widgets.py  window.py
tailwindall/classes_lib/: classes.py
tailwindall/drone_lib/: control.py  tello.py
tailwindall/graphics_lib/: events.py  graphics.py  objects.py  scenes.py
tailwindall/graphics_lib/examples/: parkour.py
tailwindall/maths_lib/: angles.py  lines.py  physics.py  shapes.py
tailwindall/network_lib/: client.py  database.py  network.py  server.py
tailwindall/statistics_lib/: diagrams.py  statistics.py
tailwindall/web_lib/: components.py  js.py  tw.py  web.py
(+13 files in other folders)
